# dialect

./: package-lock.json  package.json
programs/dialect/: Cargo.toml
src/api/: index.ts
src/utils/: dialect.ts  index.ts
